--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "amazon-cognito-identity-js": "^4.6.0",
-    "aws-sdk": "^2.900.0",
+    "amazon-cognito-identity-js": "^5.0.4",
+    "aws-sdk": "^2.943.0",
     "cors": "^2.8.5",
     "dot-env": "0.0.1",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "jwk-to-pem": "^2.0.5",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "password-generator": "^2.3.2"
   }
 }
